Adding formats notebook

--- a/scraping.ipynb
+++ b/scraping.ipynb
@@ -156,7 +156,8 @@
     "\n",
     "Nosotros, principalmente, usaremos los repositorios para dos tareas:\n",
     "- Para almacenar y gestionar el código de nuestro proyecto\n",
-    "- Para almacenar, descargar y gestionar los conjuntos de datos con los que trabajamos"
+    "- Para almacenar, descargar y gestionar los conjuntos de datos con los que trabajamos\n",
+    "- Para facilitar el intercambio de datos"
    ]
   },
   {
@@ -183,14 +184,70 @@
     }
    },
    "source": [
-    "### Ejemplos de repositorios de datos\n",
-    "- https://www.kaggle.com/\n",
+    "### Formatos\n",
+    "- Generales: CSV, TXT, WORD, JSON, XML, XLS\n",
+    "- Optimizados: HDF5, Parquet, Arrow\n",
+    "- Semánticos (LOD, SPARQL): RDF, Turtle, N3, JSON-LD"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "![Ejemplo de Turtle](https://miro.medium.com/max/573/1*WgqGqn1tcd_aSpQbN45aBw.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Repositorios de datos\n",
+    "- https://www.kaggle.com/datasets\n",
     "- http://www.kdnuggets.com/datasets/index.html\n",
-    "- https://archive.ics.uci.edu/ml/datasets.html\n",
+    "- https://archive.ics.uci.edu/ml/datasets.php\n",
     "- https://github.com/caesar0301/awesome-public-datasets\n",
     "- http://sevilla.idesevilla.opendata.arcgis.com/\n",
-    "- http://datos.madrid.es/portal/site/egob/\n",
-    "- Extra: ¿Sólo de datos? https://www.github.com/"
+    "- http://datosabiertos.sevilla.org/\n",
+    "- http://datos.madrid.es/portal/site/egob/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Repositorios de datos abiertos enlazados (LOD)\n",
+    "- http://datos.bne.es/inicio.html\n",
+    "- https://bnb.data.bl.uk/\n",
+    "- https://www.europeana.eu/portal/en\n",
+    "- https://wiki.dbpedia.org/\n",
+    "- https://m.wikidata.org/wiki/Wikidata:Main_Page"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Repositorios de código\n",
+    "- https://bitbucket.org/\n",
+    "- https://www.github.com/\n",
+    "- https://sourceforge.net/\n",
+    "- https://launchpad.net/"
    ]
   },
   {
@@ -223,6 +280,19 @@
     "Web scraping es una técnica que utiliza programas software para extraer información de sitios web.\n",
     "\n",
     "Usualmente, estos programas simulan la navegación de un humano en Internet ya sea utilizando el protocolo HTTP manualmente, o incrustando un navegador en una aplicación."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Scraping\n",
+    "\n",
+    "![Diagrama de una petición HTTP](http://www.hermosaprogramacion.com/wp-content/uploads/2015/01/http-protocolo-peticion.png)"
    ]
   },
   {
@@ -338,27 +408,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "scrolled": true,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[<a href=\"https://elpais.com/politica/2019/11/14/actualidad/1573759607_849802.html\">Iglesias advierte a la militancia de que deberá “ceder en muchas cosas”</a>,\n",
-       " <a href=\"https://elpais.com/ccaa/2019/11/14/catalunya/1573756832_928724.html\">Una encuesta avalada por la Generalitat pregunta a los estudiantes de secundaria si son independentistas</a>,\n",
-       " <a href=\"https://elpais.com/politica/2019/11/14/actualidad/1573754706_551928.html\">El Rey culmina su visita a La Habana con una reunión sorpresa con Raúl Castro</a>]"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Scraping con Python\n",
     "\n",
@@ -379,28 +436,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Iglesias advierte a la militancia de que deberá “ceder en muchas cosas”',\n",
-       " 'Una encuesta avalada por la Generalitat pregunta a los estudiantes de secundaria si son independentistas',\n",
-       " 'El Rey culmina su visita a La Habana con una reunión sorpresa con Raúl Castro',\n",
-       " 'El juez sospecha que el Govern usó subvenciones para sufragar el ‘procés’',\n",
-       " 'Díaz Ayuso replica con ironía a Monasterio sobre el aborto: “Dios no me hizo perfecta y por eso no soy de Vox”']"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Scraping con Python\n",
     "\n",
@@ -415,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -437,38 +479,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('Jornada 38', <tr>\n",
-       " <td class=\"local\">\n",
-       " <figure>\n",
-       " <img alt=\"Leganés\" src=\"https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/957.png\"/>\n",
-       " </figure>\n",
-       " <span class=\"equipo_t957\">Leganés</span>\n",
-       " </td>\n",
-       " <td class=\"resultado\"><span class=\"fecha\">24/05</span> <span class=\"hora\">18:30</span></td>\n",
-       " <td class=\"visitante\">\n",
-       " <span class=\"equipo_t186\">Real Madrid</span>\n",
-       " <figure>\n",
-       " <img alt=\"Real Madrid\" src=\"https://e00-marca.uecdn.es/assets/sports/logos/football/png/72x72/186.png\"/>\n",
-       " </figure>\n",
-       " </td>\n",
-       " </tr>)"
-      ]
-     },
-     "execution_count": 83,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Scraping con Python\n",
     "\n",
@@ -482,24 +499,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('Villarreal', '24/05 18:30', 'Eibar')"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Scraping con Python\n",
     "\n",
@@ -518,24 +524,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Villarreal vs Eibar: 24/05 18:30 | Jornada 38']"
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Scraping con Python\n",
     "\n",
@@ -551,57 +546,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['Villarreal vs Granada: 4-4 | Jornada 1',\n",
-       " 'Levante vs Villarreal: 2-1 | Jornada 2',\n",
-       " 'Villarreal vs Real Madrid: 2-2 | Jornada 3',\n",
-       " 'Leganés vs Villarreal: 0-3 | Jornada 4',\n",
-       " 'Villarreal vs Valladolid: 2-0 | Jornada 5',\n",
-       " 'Barcelona vs Villarreal: 2-1 | Jornada 6',\n",
-       " 'Villarreal vs Betis: 5-1 | Jornada 7',\n",
-       " 'Osasuna vs Villarreal: 2-1 | Jornada 8',\n",
-       " 'Espanyol vs Villarreal: 0-1 | Jornada 9',\n",
-       " 'Villarreal vs Alavés: 4-1 | Jornada 10',\n",
-       " 'Eibar vs Villarreal: 2-1 | Jornada 11',\n",
-       " 'Villarreal vs Athletic: 0-0 | Jornada 12',\n",
-       " 'Mallorca vs Villarreal: 3-1 | Jornada 13',\n",
-       " 'Villarreal vs Celta: 24/11 18:30 | Jornada 14',\n",
-       " 'Valencia vs Villarreal: 30/11 21:00 | Jornada 15',\n",
-       " 'Villarreal vs Atlético: 06/12 22:00 | Jornada 16',\n",
-       " 'Sevilla vs Villarreal: 15/12 18:30 | Jornada 17',\n",
-       " 'Villarreal vs Getafe: 21/12 18:30 | Jornada 18',\n",
-       " 'R. Sociedad vs Villarreal: 05/01 14:00 | Jornada 19',\n",
-       " 'Villarreal vs Espanyol: 19/01 18:30 | Jornada 20',\n",
-       " 'Alavés vs Villarreal: 26/01 18:30 | Jornada 21',\n",
-       " 'Villarreal vs Osasuna: 02/02 18:30 | Jornada 22',\n",
-       " 'Valladolid vs Villarreal: 09/02 18:30 | Jornada 23',\n",
-       " 'Villarreal vs Levante: 16/02 18:30 | Jornada 24',\n",
-       " 'Atlético vs Villarreal: 23/02 18:30 | Jornada 25',\n",
-       " 'Athletic vs Villarreal: 01/03 18:30 | Jornada 26',\n",
-       " 'Villarreal vs Leganés: 08/03 18:30 | Jornada 27',\n",
-       " 'Celta vs Villarreal: 15/03 18:30 | Jornada 28',\n",
-       " 'Villarreal vs Mallorca: 22/03 18:30 | Jornada 29',\n",
-       " 'Granada vs Villarreal: 05/04 18:30 | Jornada 30',\n",
-       " 'Villarreal vs Sevilla: 12/04 18:30 | Jornada 31',\n",
-       " 'Villarreal vs Valencia: 22/04 21:00 | Jornada 32',\n",
-       " 'Betis vs Villarreal: 26/04 18:30 | Jornada 33',\n",
-       " 'Villarreal vs Barcelona: 03/05 18:30 | Jornada 34',\n",
-       " 'Getafe vs Villarreal: 10/05 18:30 | Jornada 35',\n",
-       " 'Villarreal vs R. Sociedad: 13/05 21:00 | Jornada 36',\n",
-       " 'Real Madrid vs Villarreal: 17/05 18:30 | Jornada 37',\n",
-       " 'Villarreal vs Eibar: 24/05 18:30 | Jornada 38']"
-      ]
-     },
-     "execution_count": 94,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Scraping con Python\n",
     "\n",
@@ -637,7 +584,8 @@
     "- Dificultad a la hora de estudiar la estructura de una página web\n",
     "- Las páginas webs pueden cambiar a lo largo del tiempo\n",
     "- Nuestros programas también necesitan cambiar\n",
-    "- Necesitamos revisar las leyes y los derechos de uso de las páginas webs para poder aplicar esta técnica"
+    "- Necesitamos revisar las leyes y los derechos de uso de las páginas webs para poder aplicar esta técnica\n",
+    "- Contenido dinámico (☠️ Javascript ☠️)"
    ]
   },
   {
@@ -694,21 +642,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "found: el:data\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Expresiones regulares en Python\n",
     "\n",
@@ -770,24 +710,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<re.Match object; span=(0, 3), match='www'>\n",
-      "None\n",
-      "<re.Match object; span=(0, 3), match='123'>\n",
-      "<re.Match object; span=(2, 7), match='pe@ex'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Expresiones regulares en Python\n",
     "text = \"www.example.com\"\n",
@@ -817,27 +746,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<re.Match object; span=(0, 3), match='www'>\n",
-      "<re.Match object; span=(0, 1), match='w'>\n",
-      "<re.Match object; span=(0, 2), match='ho'>\n",
-      "<re.Match object; span=(3, 10), match='a12345c'>\n",
-      "<re.Match object; span=(3, 11), match='a12345 c'>\n",
-      "<re.Match object; span=(0, 4), match='pepe'>\n",
-      "<re.Match object; span=(0, 4), match='pepe'>\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Expresiones regulares en Python\n",
     "text = \"www.example.com\"\n",
@@ -872,22 +787,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "prueba@mail\n",
-      "prueba@mail.com\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Expresiones regulares en Python\n",
     "text = \"betis prueba@mail.com mas pruebas extras\"\n",
@@ -915,23 +821,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "prueba@mail.com\n",
-      "prueba\n",
-      "mail.com\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Expresiones regulares en Python\n",
     "text = \"betis prueba@mail.com mas pruebas extras\"\n",
@@ -958,23 +854,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "prueba@mail.com\n",
-      "scientist@hostmail.com\n",
-      "prueba2@pepemail.com\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Expresiones regulares en Python\n",
     "text = \"betis prueba@mail.com scientist@hostmail.com mas prueba2@pepemail.com pruebas extras\"\n",
@@ -999,27 +885,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[('prueba', 'mail.com'), ('scientist', 'hostmail.com'), ('prueba2', 'pepemail.com')]\n",
-      "prueba\n",
-      "mail.com\n",
-      "scientist\n",
-      "hostmail.com\n",
-      "prueba2\n",
-      "pepemail.com\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Expresiones regulares en Python\n",
     "text = \"betis prueba@mail.com scientist@hostmail.com mas prueba2@pepemail.com pruebas extras\"\n",
@@ -1046,21 +918,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "betis alex@my_mail.com alex@my_mail.com mas alex@my_mail.com pruebas extras\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### Expresiones regulares en Python\n",
     "text = \"betis prueba@mail.com scientist@hostmail.com mas prueba2@pepemail.com pruebas extras\"\n",
