--- a/formats.ipynb
+++ b/formats.ipynb
@@ -173,9 +173,9 @@
    "source": [
     "### Tipos de datos\n",
     "\n",
-    "En general, los datos se pueden dividir en dos grandes categorı́as:\n",
-    "- Datos cualitativos: Definen una cualidad. Responden a la pregunta ¿Cuál?.\n",
-    "- Datos cuantitativos: Son datos que se refieren a números (cantidad)."
+    "Atendiendo a su naturaleza, los datos se pueden dividir en dos grandes categorı́as:\n",
+    "- Datos cualitativos, que definen una cualidad. Entrevistas, estudios focales, observaciones, etc.\n",
+    "- Datos cuantitativos, refereidos a cantidades numéricas. Cualquier información cuantificable: cuántos, con qué frecuencia, qué cantidad, etc."
    ]
   },
   {
@@ -188,10 +188,10 @@
    "source": [
     "### Tipos de datos\n",
     "\n",
-    "Además de esas dos grandes categorı́as nos podemos encontrar otros tipos (definidos brevemente) como:\n",
-    "- Datos categóricos: Usan una categorı́a para describir un objeto.\n",
-    "- Datos discretos: Son datos numéricos enteros y sólo se pueden expresar con una sola cifra.\n",
-    "- Datos continuos: Son datos que sı́ pueden recibir cualquier valor numérico."
+    "De acuerdo a su tipología:\n",
+    "- Datos categóricos, cuyos valores sólo pueden ser una opción de entre varias disponibles: color del pelo, frecuencia cardíaca, tipo de precipitación, etc.\n",
+    "- Datos discretos, con valores numéricos en el rango entero: edad, número de hijos, número compras mensual, etc.\n",
+    "- Datos continuos, con valores que pueden tomar todo el rango real: salario medio, edad media, gasto anual, etc."
    ]
   },
   {
@@ -204,10 +204,9 @@
    "source": [
     "### Tipos de datos\n",
     "\n",
-    "Las definiciones anteriores nos ayudarán a entender y comprender la forma de los datos con los que estamos trabajando en cualquier momento.\n",
-    "\n",
-    "Además de la clasificación vista, nos centraremos en dos nuevos tipos que serán la base de estudio del capı́tulo:\n",
+    "Además, según su presentación hablamos de:\n",
     "- Datos estructurados\n",
+    "\n",
     "- Datos no estructurados"
    ]
   },
@@ -238,8 +237,9 @@
     "\n",
     "Trabajar con datos estructurados proporciona ciertas ventajas como: un orden en el almacenamiento de datos, el uso de consultas, análisis, etc.\n",
     "\n",
-    "Históricamente, esta ha sido la forma clásica a la hora de trabajar con datos debido a los altos costes y limitaciones relacionados con el almacenamiento, memoria y procesamiento de los ordenadores.\n",
-    "Uno de los posibles problemas con los que nos podemos enfrentar a la hora de trabajar con datos estructurados es que no siempre podemos definir un modelo de datos de una forma sencilla."
+    "Históricamente, las máquinas han estado mejor equipadas para efectuar análisis con datos estructurados. Mientras que sólo se han proporcionado medios de almacenamiento para los no estructurados.\n",
+    "\n",
+    "Un modelo no es más que una simplificación de la realidad."
    ]
   },
   {
@@ -284,8 +284,6 @@
    },
    "source": [
     "### Tipos de datos\n",
-    "\n",
-    "Los datos no estructurados son datos en el formato tal y como\n",
     "\n",
     "Algunos ejemplos serı́an:\n",
     "- fotografı́as e imágenes gráficas\n",
@@ -343,13 +341,10 @@
    "source": [
     "### Formats de datos\n",
     "\n",
-    "Nos centraremos a continuación en cinco ejemplos de los formatos\n",
-    "más conocidos en la actualidad:\n",
+    "Ejemplos de formatos:\n",
     "- JSON\n",
-    "- CSV\n",
-    "- TSV\n",
-    "- RDF\n",
-    "- XML"
+    "- CSV, TSV\n",
+    "- XML, RDF"
    ]
   },
   {
@@ -424,13 +419,13 @@
    "source": [
     "### Formato de datos - CSV\n",
     "\n",
-    "Los archivos CSV (del inglés comma-separated values) son un tipo de documento para representar datos en forma de tabla.\n",
+    "Los archivos CSV (*comma-separated values*) son un tipo de documento para representar datos en forma de tabla.\n",
     "\n",
     "Las columnas se separan por comas y las filas por saltos de lı́nea.\n",
     "\n",
     "Los campos que contengan una coma, un salto de lı́nea o una comilla doble suelen ir encerrados entre comillas dobles.\n",
     "\n",
-    "En algunos casos, un archivo CSV puede estar separado por punto y coma en vez de por coma. Un ejemplo es cuando usamos la coma como separador decimal dentro de nuestro archivo."
+    "Sin embargo el formato es relativamente flexible: archivos separados por punto y coma en vez de por coma. Un ejemplo es cuando usamos la coma como separador decimal dentro de nuestro archivo."
    ]
   },
   {
@@ -495,57 +490,11 @@
     }
    },
    "source": [
-    "### Formato de datos - RDF\n",
-    "\n",
-    "El Marco de Descripción de Recursos (del inglés Resource Description Framework, RDF) es una familia de especificaciones de la World Wide Web Consortium (W3C) originalmente diseñado como un modelo de datos para metadatos.\n",
-    "\n",
-    "Ha llegado a ser usado como un método general para la descripción conceptual o modelado de la información que se implementa en los recursos web utilizando una variedad de notaciones de sintaxis."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "### Formato de datos - RDF\n",
-    "```xml\n",
-    "<?xml version=\"1.0\"?>\n",
-    "<rdf:RDF\n",
-    "xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"\n",
-    "xmlns:si=\"http://www.w3schools.com/rdf/\">\n",
-    "    <rdf:Description\n",
-    "    rdf:about=\"http://www.w3schools.com/rdf/\">\n",
-    "        <music:artist>Bob Dylan</music:artist>\n",
-    "        <music:song>USA</music:song>\n",
-    "        <music:year>Columbia</music:year>\n",
-    "    </rdf:Description>\n",
-    "    <rdf:Description\n",
-    "    rdf:about=\"http://www.w3schools.com/rdf/\">\n",
-    "        <music:artist>Bob Dylan</music:artist>\n",
-    "        <music:song>USA</music:song>\n",
-    "        <music:year>Columbia</music:year>\n",
-    "    </rdf:Description>\n",
-    "    ...\n",
-    "</rdf:RDF>\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
     "### Formato de datos - XML\n",
     "\n",
-    "XML, siglas en inglés de eXtensible Markup Language (”lenguaje de marcas Extensible”), es un lenguaje de marcas desarrollado por el World Wide Web Consortium (W3C) utilizado para almacenar datos en forma legible.\n",
+    "XML, siglas en inglés de eXtensible Markup Language (”lenguaje de marcas Extensible”), es un lenguaje de marcas desarrollado por el World Wide Web Consortium (W3C) utilizado para almacenar datos en forma legible tanto por máquinas como por personas.\n",
     "\n",
-    "XML no ha nacido sólo para su aplicación para Internet, sino que se propone como un estándar para el intercambio de información estructurada entre diferentes plataformas."
+    "XML no ha nacido sólo para su aplicación para en Internet, sino que se propone como un estándar para el intercambio de información estructurada entre diferentes plataformas."
    ]
   },
   {
@@ -609,6 +558,52 @@
     }
    },
    "source": [
+    "### Formato de datos - RDF\n",
+    "\n",
+    "El Marco de Descripción de Recursos (del inglés Resource Description Framework, RDF) es una familia de especificaciones de la World Wide Web Consortium (W3C) originalmente diseñado como un modelo de datos para metadatos.\n",
+    "\n",
+    "Ha llegado a ser usado como un método general para la descripción conceptual o modelado de la información que se implementa en los recursos web utilizando una variedad de notaciones de sintaxis."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "### Formato de datos - RDF\n",
+    "```xml\n",
+    "<?xml version=\"1.0\"?>\n",
+    "<rdf:RDF\n",
+    "xmlns:rdf=\"http://www.w3.org/1999/02/22-rdf-syntax-ns#\"\n",
+    "xmlns:si=\"http://www.w3schools.com/rdf/\">\n",
+    "    <rdf:Description\n",
+    "    rdf:about=\"http://www.w3schools.com/rdf/\">\n",
+    "        <music:artist>Bob Dylan</music:artist>\n",
+    "        <music:song>USA</music:song>\n",
+    "        <music:year>Columbia</music:year>\n",
+    "    </rdf:Description>\n",
+    "    <rdf:Description\n",
+    "    rdf:about=\"http://www.w3schools.com/rdf/\">\n",
+    "        <music:artist>Bob Dylan</music:artist>\n",
+    "        <music:song>USA</music:song>\n",
+    "        <music:year>Columbia</music:year>\n",
+    "    </rdf:Description>\n",
+    "    ...\n",
+    "</rdf:RDF>\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "### Índice\n",
     "1. Presentación de la asignatura\n",
     "2. Introducción\n",
@@ -634,7 +629,7 @@
     "Además de Pandas, existen librerı́as especializadas para trabajar con formatos de datos especı́ficos.\n",
     "\n",
     "En nuestro caso veremos las librerı́as (también llamados módulos o paquetes):\n",
-    "- `csv`, `pandas`\n",
+    "- `csv`\n",
     "- `json`"
    ]
   },
@@ -666,7 +661,7 @@
     "\n",
     "El paquete CSV ofrece la siguiente serie de funciones:\n",
     "- csv.reader\n",
-    "-csv.writer\n",
+    "- csv.writer\n",
     "- csv.register_dialect\n",
     "- csv.unregister_dialect\n",
     "- csv.get_dialect\n",
@@ -700,7 +695,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -709,8 +704,6 @@
    "outputs": [],
    "source": [
     "### CSV\n",
-    "\n",
-    "from io import StringIO\n",
     "\n",
     "contenido = \"\"\"Title,Release Date,Director\n",
     "And Now For Something Completely Different,1971,Ian MacNaughton\n",
@@ -724,26 +717,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "['Title', 'Release Date', 'Director']\n",
-      "['And Now For Something Completely Different', '1971', 'Ian MacNaughton']\n",
-      "['Monty Python And The Holy Grail', '1975', 'Terry Gilliam and Terry Jones']\n",
-      "['Monty Pythons Life Of Brian', '1979', 'Terry Jones']\n",
-      "['Monty Python Live At The Hollywood Bowl', '1982', 'Terry Hughes']\n",
-      "['Monty Pythons The Meaning Of Life', '1983', 'Terry Jones']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### CSV\n",
     "\n",
@@ -757,40 +737,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Title: And Now For Something Completely Different\n",
-      "Release Date: 1971\n",
-      "Director: Ian MacNaughton\n",
-      "\n",
-      "Title: Monty Python And The Holy Grail\n",
-      "Release Date: 1975\n",
-      "Director: Terry Gilliam and Terry Jones\n",
-      "\n",
-      "Title: Monty Pythons Life Of Brian\n",
-      "Release Date: 1979\n",
-      "Director: Terry Jones\n",
-      "\n",
-      "Title: Monty Python Live At The Hollywood Bowl\n",
-      "Release Date: 1982\n",
-      "Director: Terry Hughes\n",
-      "\n",
-      "Title: Monty Pythons The Meaning Of Life\n",
-      "Release Date: 1983\n",
-      "Director: Terry Jones\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### CSV\n",
     "\n",
@@ -811,36 +764,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\"Title\"|\"Release Date\"|\"Director\"\r",
-      "\r\n",
-      "\"And Now For Something Completely Different\"|\"1971\"|\"Ian MacNaughton\"\r",
-      "\r\n",
-      "\"Monty Python And The Holy Grail\"|\"1975\"|\"Terry Gilliam and Terry Jones\"\r",
-      "\r\n",
-      "\"Monty Pythons Life Of Brian\"|\"1979\"|\"Terry Jones\"\r",
-      "\r\n",
-      "\"Monty Python Live At The Hollywood Bowl\"|\"1982\"|\"Terry Hughes\"\r",
-      "\r\n",
-      "\"Monty Pythons The Meaning Of Life\"|\"1983\"|\"Terry Jones\"\r",
-      "\r\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### CSV\n",
     "\n",
     "import csv\n",
+    "\n",
     "read_file = open(\"fichero.csv\", \"r\")\n",
     "reader = csv.reader(read_file)\n",
     "write_file = open(\"nuevo_fichero.csv\", \"w\")\n",
@@ -885,34 +820,19 @@
     "- `json.load`\n",
     "- `json.loads`\n",
     "- encoders y decoders\n",
-    "Nosotros nos centraremos en las funciones lectura y escritura. Para conocer todo lo que el módulo nos ofrece: https://docs.python.org/2/library/json.html"
+    "\n",
+    "Para conocer todo lo que el módulo nos ofrece: https://docs.python.org/2/library/json.html"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'Title': 'And Now For Something Completely Different',\n",
-       "  'Release Date': 1971,\n",
-       "  'Director': 'Ian MacNaughton'},\n",
-       " {'Title': 'Monty Python And The Holy Grail',\n",
-       "  'Release Date': 1975,\n",
-       "  'Director': 'Terry Gilliam and Terry Jones'}]"
-      ]
-     },
-     "execution_count": 29,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "### JSON\n",
     "\n",
@@ -932,40 +852,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{\"Title\": \"And Now For Something Completely Different\", \"Release Date\": 1971, \"Director\": \"Ian MacNaughton\"}, {\"Title\": \"Monty Python And The Holy Grail\", \"Release Date\": 1975, \"Director\": \"Terry Gilliam and Terry Jones\"}]\n",
-      "[\n",
-      "    {\n",
-      "        \"Title\": \"And Now For Something Completely Different\",\n",
-      "        \"Release Date\": 1971,\n",
-      "        \"Director\": \"Ian MacNaughton\"\n",
-      "    },\n",
-      "    {\n",
-      "        \"Title\": \"Monty Python And The Holy Grail\",\n",
-      "        \"Release Date\": 1975,\n",
-      "        \"Director\": \"Terry Gilliam and Terry Jones\"\n",
-      "    }\n",
-      "]\n",
-      "{\"a\": 0, \"b\": 0, \"c\": 0}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### JSON\n",
     "import json\n",
     "\n",
-    "print(json.dumps(movies))\n",
-    "print(json.dumps(movies, indent=4))\n",
+    "print(json.dumps(movies))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "### JSON\n",
+    "\n",
+    "print(json.dumps(movies, indent=4))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "### JSON\n",
+    "\n",
     "print(json.dumps({\"c\": 0, \"b\": 0, \"a\": 0}, sort_keys=True))"
    ]
   },
@@ -989,21 +916,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[{'Title': 'And Now For Something Completely Different', 'Release Date': 1971, 'Director': 'Ian MacNaughton'}, {'Title': 'Monty Python And The Holy Grail', 'Release Date': 1975, 'Director': 'Terry Gilliam and Terry Jones'}]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "### JSON\n",
     "\n",
@@ -1016,12 +935,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Ejercicio\n",
+    "# JSON Lines es un formato de fichero muy usado en\n",
+    "# streaming en el que cada línea es un fichero JSON.\n",
+    "\n",
+    "# Escriba una función para leer un fichero de tipo jsonl y devolverlo como una lista Python\n",
+    "jsonl = \"\"\"{\"name\": \"Gilbert\", \"wins\": [[\"straight\", \"7♣\"], [\"one pair\", \"10♥\"]]}\n",
+    "{\"name\": \"Alexa\", \"wins\": [[\"two pair\", \"4♠\"], [\"two pair\", \"9♠\"]]}\n",
+    "{\"name\": \"May\", \"wins\": []}\n",
+    "{\"name\": \"Deloise\", \"wins\": [[\"three of a kind\", \"5♣\"]]}\"\"\"\n",
+    "with open(\"jsonl_example.jsonl\", \"w\") as f:\n",
+    "    f.write(jsonl)\n",
+    "\n",
+    "def read_jsonl(jsonl):\n",
+    "    pass\n",
+    "\n",
+    "read_jsonl(jsonl)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### Pandas\n",
     "\n",
-    "Otra manera de manipular datos es usando Pandas, que soporta CSV, JSON, JSONL, "
+    "Otra manera de manipular datos es usando Pandas, que soporta CSV, JSON, JSONL, etc."
    ]
   },
   {
