--- a/scraping.ipynb
+++ b/scraping.ipynb
@@ -170,7 +170,6 @@
    "source": [
     "### Repositorios\n",
     "\n",
-    "Algunas de las caracterı́sticas de los repositorios son:\n",
     "- Pueden ser de acceso público o estar protegidos y necesitar de una autentificación previa\n",
     "- Los repositorios más conocidos son los de carácter académico (investigación) e institucional (datos abiertos)\n",
     "- Los repositorios suelen contar con sistemas de respaldo y mantenimiento preventivo y correctivo (tolerancia a fallos)"
@@ -456,6 +455,68 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Selectores\n",
+    "- Selector de tipo o etiqueta\n",
+    "```css\n",
+    "p\n",
+    "```\n",
+    "\n",
+    "- Selector descendente (dentro)\n",
+    "```css\n",
+    "p span\n",
+    "h1 span\n",
+    "```\n",
+    "\n",
+    "- Selector de clase\n",
+    "```\n",
+    "p.destacado\n",
+    "```\n",
+    "```html\n",
+    "<p class=\"destacado\">Lorem ipsum dolor sit amet...</p>\n",
+    "```\n",
+    "\n",
+    "- Selectores de ID\n",
+    "```css\n",
+    "#destacado\n",
+    "```\n",
+    "```html\n",
+    "<p id=\"destacado\">Segundo párrafo</p>\n",
+    "```\n",
+    "\n",
+    "- Combinación de selectores básicos\n",
+    "```css\n",
+    ".aviso .especial\n",
+    "```\n",
+    "\n",
+    "- Hijos directos\n",
+    "```\n",
+    "td > span\n",
+    "```\n",
+    "\n",
+    "- Precedencia directa\n",
+    "```\n",
+    "p + a\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio\n",
+    "\n",
+    "Escriba las expresiones de selección para los siguientes casos:\n",
+    "- Todos los `div` del documento:\n",
+    "- Todos los `p` y `a`:\n",
+    "- Todos los `a` descedientes de `p`:\n",
+    "- Todos los elementos de las clase `nombreClase`:\n",
+    "- Los `div` de las clase `nombreClase`:"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -547,7 +608,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "outputs": [],
    "source": [
     "### Scraping con Python\n",
@@ -586,6 +651,31 @@
     "- Nuestros programas también necesitan cambiar\n",
     "- Necesitamos revisar las leyes y los derechos de uso de las páginas webs para poder aplicar esta técnica\n",
     "- Contenido dinámico (☠️ Javascript ☠️)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Ejercicio\n",
+    "\n",
+    "Dada la URL https://pythonprogramming.net/parsememcparseface/, se pide scrapearla y obtener el valor textual del id `yesnojs`."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Contenido dinámico\n",
+    "\n",
+    "El módulo `requests_html` permite descargar HTML y ejecutar el contenido dinámico existente.\n",
+    "```python\n",
+    "from requests_html import HTML\n",
+    "doc = \"\"\"<a href='https://httpbin.org'>\"\"\"\n",
+    "html = HTML(html=doc)\n",
+    "print(html.links)\n",
+    "html.find('#about', first=True)\n",
+    "```"
    ]
   },
   {
