--- a/formats.ipynb
+++ b/formats.ipynb
@@ -935,16 +935,44 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<div style=\"font-size: 1em; margin: 1em 0 1em 0; border: 1px solid #86989B; background-color: #f7f7f7; padding: 0;\">\n",
+    "<p style=\"margin: 0; padding: 0.1em 0 0.1em 0.5em; color: white; border-bottom: 1px solid #86989B; font-weight: bold; background-color: #AFC1C4;\">\n",
+    "Ejercicio\n",
+    "</p>\n",
+    "<p style=\"margin: 0.5em 1em 0.5em 1em; padding: 0;\">\n",
+    "JSON Lines es un formato de fichero muy usado en streaming en el que cada línea es un fichero JSON.\n",
+    "\n",
+    "Escriba una función, `read_jsonl` para leer un fichero de tipo jsonl y devolverlo como una lista Python.\n",
+    "</p>\n",
+    "</div>\n",
+    "<details>\n",
+    "<summary>Solución</summary>\n",
+    "<code>\n",
+    "def read_jsonl(jsonl):\n",
+    "    # Escriba su solución aquí\n",
+    "    with open(jsonl, \"r\") as f:\n",
+    "        print([json.loads(l) for l in f.read().split(\"\\n\")])\n",
+    "</code>\n",
+    "</details>"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
+   "execution_count": 37,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
-    "### Ejercicio\n",
-    "# JSON Lines es un formato de fichero muy usado en\n",
-    "# streaming en el que cada línea es un fichero JSON.\n",
-    "\n",
-    "# Escriba una función para leer un fichero de tipo jsonl y devolverlo como una lista Python\n",
     "jsonl = \"\"\"{\"name\": \"Gilbert\", \"wins\": [[\"straight\", \"7♣\"], [\"one pair\", \"10♥\"]]}\n",
     "{\"name\": \"Alexa\", \"wins\": [[\"two pair\", \"4♠\"], [\"two pair\", \"9♠\"]]}\n",
     "{\"name\": \"May\", \"wins\": []}\n",
@@ -953,14 +981,19 @@
     "    f.write(jsonl)\n",
     "\n",
     "def read_jsonl(jsonl):\n",
+    "    # Escriba su solución aquí\n",
     "    pass\n",
     "\n",
-    "read_jsonl(jsonl)"
+    "read_jsonl(\"jsonl_example.jsonl\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Pandas\n",
     "\n",
